--- a/_posts/korea_times/2024-10-31-docker.md
+++ b/_posts/korea_times/2024-10-31-docker.md
@@ -32,7 +32,7 @@ tags:   BYD Mobility GameChanger
 
 <h3>🎲 The EV Table Welcomes a New Player: Can BYD Emerge as the Winner?</h3>
 
-If you're interested in cars, you've probably heard the name **BYD** at least once. Yes, BYD is the game-changer aiming to shake up the electric vehicle(EV) market with its astonishing price point in the 30-million KRW range.After much speculation in the industry, BYD officially entered the South Korean market on **January 16, 2025**. 
+If you're interested in cars, you've probably heard the name **BYD** at least once. Yes, BYD is the game-changer aiming to shake up the electric vehicle(EV) market with its astonishing price point in the 30-million KRW range. After much speculation in the industry, BYD officially entered the South Korean market on **January 16, 2025**. 
 
 <br>
 
@@ -85,9 +85,15 @@ BYD is set to introduce the following EV models in South Korea
 
 - **Atto 3**: A compact SUV similar to Hyundai Casper EV, available for under 30 million KRW with government subsidies.
 
+<img src="{{ '/assets/2025/0123/atto3.png' | relative_url }}" alt="Descriptive Alt Text" />
+
 - **Seal 7**: A mid-sized SUV positioned competitively against Hyundai Sorento.
 
+<img src="{{ '/assets/2025/0123/seal7.jpg' | relative_url }}" alt="Descriptive Alt Text" />
+
 - **Dolphin**: A compact hatchback priced in the 20 million KRW range.
+
+<img src="{{ '/assets/2025/0123/dolphin.png' | relative_url }}" alt="Descriptive Alt Text" />
 
 BYD's strength lies in its exceptional price-to-performance ratio, particularly its battery technology, which outperforms many competitors.
 
@@ -103,7 +109,7 @@ Despite its promising entry, BYD faces several challenges in South Korea
 
 - In fact, Lee Ho-geun, an automotive engineering professor at Daedok University, analyzed the psychological differences between Japanese and Korean consumers. He noted that BYD, which entered the Japanese market in 2023 before Korea, surpassed Toyota Motor to rank 4th in EV sales.
 
-- Unlike Japan, Korean consumers prioritize quality, brand value, and do not necessarily prefer domestic brands. Therefore, despite BYD's competitive pricing, it may not be seen as a necessary option in the Korean market.
+- Unlike Japan, **Korean consumers prioritize quality, brand value, and do not necessarily prefer domestic brands.** Therefore, despite BYD's competitive pricing, it may not be seen as a necessary option in the Korean market.
 
 <h4> 2️⃣ Government Regulatons</h4>
 
