--- a/_posts/korea_times/2024-10-31-docker.md
+++ b/_posts/korea_times/2024-10-31-docker.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "🎰 The EV Table Welcomes a New Player: Can BYD Emerge as the Winner?"
-series: "Korea Times"  # Korea Times 시리즈에 대한 시리즈 지정
+series: "koreatimes"  # Korea Times 시리즈에 대한 시리즈 지정
 subtitle: "BYD's Entry into the Korean Market and the Shift in the EV Game"
 date:   2025-01-23
 author: Arielle
@@ -58,7 +58,7 @@ BYD's entry into the Korean market doesn't only pose a threat to domestic giants
 
 Another major reason for BYD’s potential success in South Korea is the **rental car market.** BYD is expected to leverage a **high-volume, low-margin strategy** to collaborate with local rental car companies. Here’s why!
 
-<h4> 1️⃣ Market Saturation in China</h4>
+<h4> 1️⃣ 5</h4>
 
 - As of 2023, there were **52 EV brands** and **187 models** in China, leading to a **9.6% drop in average vehicle prices.**
 
@@ -109,7 +109,7 @@ Despite its promising entry, BYD faces several challenges in South Korea
 
 - In fact, Lee Ho-geun, an automotive engineering professor at Daedok University, analyzed the psychological differences between Japanese and Korean consumers. He noted that BYD, which entered the Japanese market in 2023 before Korea, surpassed Toyota Motor to rank 4th in EV sales.
 
-- Unlike Japan, **Korean consumers prioritize quality, brand value, and do not necessarily prefer domestic brands.** Therefore, despite BYD's competitive pricing, it may not be seen as a necessary option in the Korean market.
+- Unlike Japan, **Korean consumers prioritize quality, brand value, and do not necessarily prefer domestic brands.** Therefore, BYD’s affordability may not be enough to convince Korean consumers who prioritize quality and brand reputation.
 
 <h4> 2️⃣ Government Regulatons</h4>
 
@@ -129,9 +129,9 @@ Furthermore, BYD's success is likely to attract other Chinese EV makers, such as
 
 *With strong pricing strategies and a targeted approach through the rental market, BYD has the potential to revolutionize the EV industry in Korea. However, the real challenge lies in overcoming brand recognition hurdles, ensuring high service quality, and adapting to local regulations.*
 
-*In my view, **BYD’s entry into Korea was never a question of 'if,' but 'when.'*** Industry experts have long pointed out issues with Korea’s eco-friendly car policies, and this moment feels like a classic case of fixing the barn after the horse has bolted. But what can we do? The table is set, and the new players have arrived.*
+*In my view, **BYD’s entry into Korea was never a question of 'if,' but 'when.'*** *Industry experts have long pointed out issues with Korea’s eco-friendly car policies, and this moment feels like a classic case of fixing the barn after the horse has bolted. But what can we do? The table is set, and the new players have arrived.*
 
-***BYD has stepped up as the new dealer, ready to shuffle the cards and redefine the rules***. However, domestic automakers that have weathered countless storms might have a few tricks up their sleeves. So no matter what to do, in the end, the true game-changer will be us.*
+***BYD has stepped up as the new dealer, ready to shuffle the cards and redefine the rules***. *However, domestic automakers that have weathered countless storms might have a few tricks up their sleeves. So no matter what to do, in the end, the true game-changer will be us.*
 
 
 
@@ -139,3 +139,7 @@ Furthermore, BYD's success is likely to attract other Chinese EV makers, such as
 ### Reference
 
 [Overseas carmakers in Korea sandwiched by influx of ultra-cheap BYD EVs](https://www.koreatimes.co.kr/www/tech/2025/01/419_390859.html)
+
+[BYD to Enter South Korean Passenger Car Market Next Year](https://www.businesskorea.co.kr/news/articleView.html?idxno=229280&utm_source=chatgpt.com)
+
+[Survey reveals consumer preference for hybrid cars over pure EVs](https://www.kedglobal.com/electric-vehicles/newsView/ked202302100017?utm_source=chatgpt.com)
