--- a/_posts/docker_study/2024-10-05-docker.md
+++ b/_posts/docker_study/2024-10-05-docker.md
@@ -5,7 +5,7 @@ series: "docker"  # Docker 시리즈에 대한 시리즈 지정
 subtitle: "Building a Cloud-Based Docker Environment on Azure"
 date:   2024-10-05
 author: Arielle
-categories: [Code & Road] #Story Garage
+categories: [code-road]
 tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 #cover:  "/assets/instacode.png"
 ---
