--- a/_posts/docker_study/2024-10-31-docker.md
+++ b/_posts/docker_study/2024-10-31-docker.md
@@ -5,8 +5,9 @@ series: "docker"  # Docker 시리즈에 대한 시리즈 지정
 subtitle: "Last Chapter of Docker Study : Least Previlege in Docker for Autonomous Driving "
 date:   2024-10-31
 author: Arielle
-categories: [Code & Road] #Story Garage
+categories: [code-road] #
 tags:   Docker BigData ADLS2 CloudStorage Azure Autonomous_Driving Acconunt
+permalink : 2024/10/31/docker.html
 #cover:  "/assets/instacode.png"
 ---
 
