--- a/_posts/docker_study/2024-09-28-docker.md
+++ b/_posts/docker_study/2024-09-28-docker.md
@@ -5,7 +5,7 @@ series: "docker"  # Docker 시리즈에 대한 시리즈 지정
 subtitle: "Why Docker Matters for Autonomous Driving?"
 date:   2024-09-28
 author: Arielle
-categories: [Code & Road] #Story Garage
+categories: [code-road]
 tags:   Docker Autonomous_Driving NVIDIA
 #cover:  "/assets/header2.gif"
 ---
