--- a/_posts/docker_study/2024-10-11-docker.md
+++ b/_posts/docker_study/2024-10-11-docker.md
@@ -5,7 +5,7 @@ series: "docker"  # Docker 시리즈에 대한 시리즈 지정
 subtitle: "Optimizing Kaggle Python Docker for Data Analysis"
 date:   2024-10-11
 author: Arielle
-categories: [Code & Road] #Story Garage
+categories: [code-road]
 tags:   Docker Autonomous_Driving NVIDIA Azure Cloud Python
 #cover:  "/assets/instacode.png"
 ---
