--- a/_posts/docker_study/2024-10-25-docker.md
+++ b/_posts/docker_study/2024-10-25-docker.md
@@ -5,7 +5,7 @@ series: "docker"  # Docker 시리즈에 대한 시리즈 지정
 subtitle: "The New Standard for Big Data Management: ADLS2 and Docker Integration Guide"
 date:   2024-10-25
 author: Arielle
-categories: [Code & Road] #Story Garage
+categories: [code-road]
 tags:   Docker BigData ADLS2 CloudStorage Azure DataLake
 #cover:  "/assets/instacode.png"
 ---
