modify docker posting english version

--- a/_posts/docker_study/2024-09-28-docker.md
+++ b/_posts/docker_study/2024-09-28-docker.md
@@ -20,6 +20,12 @@ tags:   Docker Autonomous_Driving NVIDIA
 </em>
 </p>
 
+<br>
+
+<img src="{{ '/assets/2024/Docker_logo.svg' | relative_url }}" alt="Descriptive Alt Text" />
+
+<br>
+
 ---
 
 ## 1. Docker might be essential if you want to work as an autonomous driving developer in the future!
