--- a/_posts/Daily/2025-03-22-daily.md
+++ b/_posts/Daily/2025-03-22-daily.md
@@ -8,7 +8,7 @@ author: Arielle
 categories: [story-garage] #Story Garage
 tags: [자율주행, 이동, 자유, 기술로지키다, 기억, 자전거, 데일리]
 permalink: /story/the-ev-table-byd-winner/
-#cover:  "/assets/post_subtitle_background/casino.jpg"
+cover:  "/assets/post_subtitle_background/driving.jpg"
 ---
 
 <html lang="en">
@@ -19,7 +19,7 @@ permalink: /story/the-ev-table-byd-winner/
     <style>
         h2, h3, h4 {
             color: SteelBlue;
-        }
+        }å
     </style>
 </head>
 <body>
