--- a/_posts/Daily/2025-03-22-daily.md
+++ b/_posts/Daily/2025-03-22-daily.md
@@ -26,26 +26,40 @@ cover:  "/assets/post_subtitle_background/driving.jpg"
 </body>
 </html>
 
+<br>
+사실 내가 자율주행 개발자를 꿈꾸게 된 계기는 아주 거창한 이유는 아니었다. 어문 중심의 대학교를 다니며 우연히 SW&AI를 이중 전공하게 되었고 어린 시절 가장 좋아했던 영화가 트랜스포머였던 정도?  
+(지금 생각해보면 그 영화 속 차들이 자율주행의 미래였을지도 모르겠다.😉)
 
-<h3>🎲 The EV Table Welcomes a New Player: Can BYD Emerge as the Winner?</h3>
 
-If you're interested in cars, you've probably heard the name **BYD** at least once. Yes, BYD is the game-changer aiming to shake up the electric vehicle(EV) market with its astonishing price point in the 30-million KRW range. After much speculation in the industry, BYD officially entered the South Korean market on **January 16, 2025**. 
+전공 수업을 하나씩 들어가며 동아리 활동으로 GDSC(Google Developer Student Club)에 가입하게 되었고 그곳에서 처음 Waymo를 알게 되었다. 자율주행차라는 단어는 들어본 적 있었지만 실제로 어떤 기술이며 어디까지 와있는지는 그 때 처음 알았다고 해도 무방하다.
 
 <br>
 
-<img src="{{ '/assets/2025/0123/byd_logo.png' | relative_url }}" alt="Descriptive Alt Text" />
+<img src="{{ '/assets/2025/0322/GDSC.png' | relative_url }}" alt="Descriptive Alt Text" />
 
 <br>
 
-As someone building a career in mobility, software, and autonomous driving, BYD represents more than just another car brand—it holds significant value. In this post, **we'll explore why BYD is worth paying attention to and what challenges lie ahead**.
+그리고 아주아주 평범했던 어느 날 무언가를 깨달았다. 크게 싫어하는 것도 좋아하는 것도 없던 내가 자율주행이라는 미지의 영역에 빠진 이유는, 어쩌면 아주 오래전부터 내 안에 있었던 감정 때문이라는 것을 말이다. 
+
+
+***<span style="color:tomato;">'이동의 자유'에 대한 갈망!</span>***
+
 
 ---
 
-<h3>📊 BYD's Market Impact and Position Among Domestic Brands</h3>
+<h3>🚲 When I was a child..</h3>
 
-The South Korean import car market has a **'mid-tier'** category, which includes brands like **Renault, GM, and KG Mobility**. While these brands produce quality vehicles, they neither belong to the high-end luxury segment nor have a strong foothold in the EV and hybrid market.
+사람마다 시간이 지나도 유난히 또렷하게 기억나는 어린 시절의 장면이 있다. 나는 두발 자전거를 처음 배웠던 날이다.
 
-***<span style="color:tomato;">Simply put, their positioning is ambiguous.</span>***
+지금도 그렇지만 그때도 몸 쓰는 걸 잘하지는 못했던 나는 덕분에(?) 여러 번 넘어졌고, 다음날 또 자전거 연습을 하러 가는 길이 그닥 즐겁지는 않았던 것 같다. 그럼에도 불구하고 다시 바퀴 위에 올라탄 건 아마도 그날의 파란 하늘 때문이었을 것이다. (TMI; 나는 파란 하늘을 정말 좋아하기 때문이다. 😂)
+
+
+**만약 그날 하늘이 그렇게 파랗지 않았다면 지금 이 길 위에 서 있지 않았을지도 모르겠다.**
+
+이 글을 읽고 있는 분들은 혹시 두발 자전거 어떻게 배웠을지 문득 궁금해진다.
+
+나는 엄마가 뒤에서 잡아주었고 그렇게 몇 번을 더 연습하다 결국에는 혼자 달릴 수 있게 되었다. 그리고 처음으로 자전거를 타고 한강변을 달릴 때 느꼈던 감정은 아직도 생생하다. 걸어가기엔 멀고 버스를 타기엔 애매했던 곳을 **'내가 원하는 속도로, 원하는 방향으로' 달릴 수 있다는 것.** 그건 단순한 이동이 아니라 **‘자유’ 그 자체**였다.
+
 
 BYD's entry into the Korean market doesn't only pose a threat to domestic giants like Hyundai and Kia. Mid-tier brands are also likely to face serious challenges. **BYD aims to capture market share by offering affordable yet practical EVs that cater to a broad audience.**
 
