--- a/_posts/Daily/2025-03-22-daily.md
+++ b/_posts/Daily/2025-03-22-daily.md
@@ -17,21 +17,22 @@ cover:  "/assets/post_subtitle_background/driving.jpg"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[Daily]</title>
     <style>
-        h2, h3, h4 {
-            color: SteelBlue;
-        }å
-    </style>
+    h2, h3, h4 {
+        color: SteelBlue;
+    }
+</style>
 </head>
 <body>
 </body>
 </html>
 
-<br>
-사실 내가 자율주행 개발자를 꿈꾸게 된 계기는 아주 거창한 이유는 아니었다. 어문 중심의 대학교를 다니며 우연히 SW&AI를 이중 전공하게 되었고 어린 시절 가장 좋아했던 영화가 트랜스포머였던 정도?  
+<p class="dropcap">
+사실 내가 자율주행 개발자를 꿈꾸게 된 계기는 아주 거창한 건 아니었다. 어문 중심의 대학교를 다니며 우연히 SW&AI를 이중 전공하게 되었고 어린 시절 가장 좋아했던 영화가 트랜스포머였던 정도?
+</p>  
 (지금 생각해보면 그 영화 속 차들이 자율주행의 미래였을지도 모르겠다.😉)
 
 
-전공 수업을 하나씩 들어가며 동아리 활동으로 GDSC(Google Developer Student Club)에 가입하게 되었고 그곳에서 처음 Waymo를 알게 되었다. 자율주행차라는 단어는 들어본 적 있었지만 실제로 어떤 기술이며 어디까지 와있는지는 그 때 처음 알았다고 해도 무방하다.
+전공 수업을 하나씩 들어가며 동아리 활동으로 GDSC(Google Developer Student Club)에 가입하게 되었고 그곳에서 처음 Waymo를 알게 되었다. 자율주행차라는 단어는 들어본 적 있었지만 어떤 기술이고 어디까지 발전해 있는지는 그때 처음 알았다고 해도 무방하다.
 
 <br>
 
@@ -39,15 +40,17 @@ cover:  "/assets/post_subtitle_background/driving.jpg"
 
 <br>
 
-그리고 아주아주 평범했던 어느 날 무언가를 깨달았다. 크게 싫어하는 것도 좋아하는 것도 없던 내가 자율주행이라는 미지의 영역에 빠진 이유는, 어쩌면 아주 오래전부터 내 안에 있었던 감정 때문이라는 것을 말이다. 
+그리고 아주아주 평범했던 어느 날 무언가를 깨달았다. 특볋히 좋아하는 것도 싫어하는 것도 없던 내가 자율주행이라는 미지의 영역에 빠진 이유는, 어쩌면 아주 오래전부터 내 안에 있었던 감정 때문이라는 것을 말이다. 
 
 
-***<span style="color:tomato;">'이동의 자유'에 대한 갈망!</span>***
+<div style="text-align: left;">
+    <span style="color:tomato; font-weight: bold; font-style: italic" >'이동의 자유'에 대한 갈망!</span>
+</div>
 
 
 ---
 
-<h3>🚲 When I was a child..</h3>
+<h3>🚲 When I was a child</h3>
 
 사람마다 시간이 지나도 유난히 또렷하게 기억나는 어린 시절의 장면이 있다. 나는 두발 자전거를 처음 배웠던 날이다.
 
@@ -61,96 +64,15 @@ cover:  "/assets/post_subtitle_background/driving.jpg"
 나는 엄마가 뒤에서 잡아주었고 그렇게 몇 번을 더 연습하다 결국에는 혼자 달릴 수 있게 되었다. 그리고 처음으로 자전거를 타고 한강변을 달릴 때 느꼈던 감정은 아직도 생생하다. 걸어가기엔 멀고 버스를 타기엔 애매했던 곳을 **'내가 원하는 속도로, 원하는 방향으로' 달릴 수 있다는 것.** 그건 단순한 이동이 아니라 **‘자유’ 그 자체**였다.
 
 
-BYD's entry into the Korean market doesn't only pose a threat to domestic giants like Hyundai and Kia. Mid-tier brands are also likely to face serious challenges. **BYD aims to capture market share by offering affordable yet practical EVs that cater to a broad audience.**
-
 ---
+<h3>🌆 So, the road I'm taking is</h3>
 
-<h3>♟️ BYD's Strategic Entry into the Rental Car Market</h3>>
+자율주행 개발자가 되겠다고 마음먹었던 그 시점에도 비슷한 감정을 느꼈다. **누구나, 언제든, 어떤 이유에서든** 자유롭게 이동할 수 있다면 얼마나 더 많은 기회와 삶의 방식이 열릴 수 있을까? 그 자유를 기술로 구현할 수 있다면 그건 단순한 엔지니어링이 아니라 감히 사람을 위한 기술이 될 수 있다고 믿는다.
 
-Another major reason for BYD’s potential success in South Korea is the **rental car market.** BYD is expected to leverage a **high-volume, low-margin strategy** to collaborate with local rental car companies. Here’s why!
-
-<h4> 1️⃣ Market Saturation in China</h4>
-
-- As of 2023, there were **52 EV brands** and **187 models** in China, leading to a **9.6% drop in average vehicle prices.**
-
-- Despite increased production capacity, factory **utilization rates remained below 50%**, making exports crucial.
-
-<h4> 2️⃣ Stable Demand Through Bulk Orders</h4>
-
-- Leading rental companies in Korea, such as [**Lotte Rent-a-Car and SK Rent-a-Car**](https://www.kedglobal.com/private-equity/newsView/ked202412060001), have been sold to Hong Kong-based private equity firms, signaling an opportunity for new partnerships.
-
-- BYD plans to accelerate market penetration by supplying vehicles in bulk.
-
-- ⚠️ It is unofficial, of course, BYD is preparing to introduce a rental model priced as low as **200,000 KRW(approximately $150 USD)** per month, further attracting customers.
+그리고 결심했다. 믿기 어렵겠지만 내 두발 자전거 뒤를 지켜주던 사람이 자전거를 탈 줄 몰랐던 것처럼 나 역시 아직 부족하지만, 소중한 사람들이 탄 '자동차 뒤를 잡아주는 개발자'가 될 수 있지 않을까? 트랜스포머처럼 멋지게 변신하는 차를 만들 수는 없겠지만 ***<span style="color:steelblue;">'누군가의 일상을 조용히 지켜주는 사람, 그 뒤를 믿고 맡길 수 있는 개발자'</span>*** 가 되고 싶다.
 
 
-<h4> 3️⃣ Overcoming Resistance to Chinese Brands</h4>
-
-- BYD is likely to focus on **B2B markets** (corporate and rental services) instead of direct sales to individuals to mitigate consumer resistance to Chinese brands.
-
----
-
-<h3>💵 BYD's Key Models and Competitive Pricing</h3>
-
-BYD is set to introduce the following EV models in South Korea
-
-- **Atto 3**: A compact SUV similar to Hyundai Casper EV, available for under 30 million KRW with government subsidies.
-
-<img src="{{ '/assets/2025/0123/atto3.png' | relative_url }}" alt="Descriptive Alt Text" />
-
-- **Seal 7**: A mid-sized SUV positioned competitively against Hyundai Sorento.
-
-<img src="{{ '/assets/2025/0123/seal7.jpg' | relative_url }}" alt="Descriptive Alt Text" />
-
-- **Dolphin**: A compact hatchback priced in the 20 million KRW range.
-
-<img src="{{ '/assets/2025/0123/dolphin.png' | relative_url }}" alt="Descriptive Alt Text" />
-
-BYD's strength lies in its exceptional price-to-performance ratio, particularly its battery technology, which outperforms many competitors.
-
----
-
-<h3>🚀 Challenges and Potential for Success in the Korean Market</h3>
-
-Despite its promising entry, BYD faces several challenges in South Korea
-
-<h4> 1️⃣ Quality and Service Expectations</h4>
-
-- Korean consumers have high expectations regarding quality, and any initial issues could damage brand credibility.
-
-- In fact, Lee Ho-geun, an automotive engineering professor at Daedok University, analyzed the psychological differences between Japanese and Korean consumers. He noted that BYD, which entered the Japanese market in 2023 before Korea, surpassed Toyota Motor to rank 4th in EV sales.
-
-- Unlike Japan, **Korean consumers prioritize quality, brand value, and do not necessarily prefer domestic brands.** Therefore, BYD’s affordability may not be enough to convince Korean consumers who prioritize quality and brand reputation.
-
-<h4> 2️⃣ Government Regulatons</h4>
-
-- Korea’s complex eco-friendly vehicle regulations and potential changes in subsidy policies could pose obstacles.
-
-<h4> 3️⃣ Brand Recognition</h4>
-
-- **Overcoming negative perceptions of Chinese car brands** through effective marketing will be crucial.
-
-Furthermore, BYD's success is likely to attract other Chinese EV makers, such as **Zeekr** and **Xpeng**, increasing competition within the local market.
-
----
-
-<h3>🏁 Conclusion</h3>
-
-*BYD’s entry into the Korean market is more than just an import—it's a game-changer that could reshape the country's EV landscape. Not only Hyundai and Kia but also mid-tier import brands must brace for a fierce challenge.*
-
-*With strong pricing strategies and a targeted approach through the rental market, BYD has the potential to revolutionize the EV industry in Korea. However, the real challenge lies in overcoming brand recognition hurdles, ensuring high service quality, and adapting to local regulations.*
-
-*In my view, **BYD’s entry into Korea was never a question of 'if,' but 'when.'*** *Industry experts have long pointed out issues with Korea’s eco-friendly car policies, and this moment feels like a classic case of fixing the barn after the horse has bolted. But what can we do? The table is set, and the new players have arrived.*
-
-***BYD has stepped up as the new dealer, ready to shuffle the cards and redefine the rules***. *However, domestic automakers that have weathered countless storms might have a few tricks up their sleeves. So no matter what to do, in the end, the true game-changer will be us.*
-
+<img src="{{ '/assets/2025/0322/sunset.jpeg' | relative_url }}" alt="Descriptive Alt Text" style="width: 400px;" />
 
 
 ---
-### Reference
-
-[Overseas carmakers in Korea sandwiched by influx of ultra-cheap BYD EVs](https://www.koreatimes.co.kr/www/tech/2025/01/419_390859.html)
-
-[BYD to Enter South Korean Passenger Car Market Next Year](https://www.businesskorea.co.kr/news/articleView.html?idxno=229280&utm_source=chatgpt.com)
-
-[Survey reveals consumer preference for hybrid cars over pure EVs](https://www.kedglobal.com/electric-vehicles/newsView/ked202302100017?utm_source=chatgpt.com)
