--- a/_posts/Daily/2025-03-22-daily.md
+++ b/_posts/Daily/2025-03-22-daily.md
@@ -1,12 +1,12 @@
 ---
 layout: post # article # page
-title:  "☕️ Already on the Road to Autonomous Driving — Before I Even Knew It"
+title:  "☕️ Already on the Road to Autonomous Driving — Before I Even Knew It 🇰🇷"
 series: "daily"  # Daily 시리즈에 대한 시리즈 지정
 #subtitle: ""
 date:   2025-03-22
 author: Arielle
 categories: [story-garage] #Story Garage
-tags: [자율주행, 이동, 자유, 기술로지키다, 기억, 자전거, 데일리]
+tags: [자율주행, 이동, 자유, 기술로지키다, 기억, 자전거, 데일리, 웨이모, 구글, GDSC]
 permalink: /story/the-ev-table-byd-winner/
 cover:  "/assets/post_subtitle_background/driving.jpg"
 ---
@@ -32,7 +32,7 @@ cover:  "/assets/post_subtitle_background/driving.jpg"
 (지금 생각해보면 그 영화 속 차들이 자율주행의 미래였을지도 모르겠다.😉)
 
 
-전공 수업을 하나씩 들어가며 동아리 활동으로 GDSC(Google Developer Student Club)에 가입하게 되었고 그곳에서 처음 Waymo를 알게 되었다. 자율주행차라는 단어는 들어본 적 있었지만 어떤 기술이고 어디까지 발전해 있는지는 그때 처음 알았다고 해도 무방하다.
+전공 수업을 하나씩 들어가며 동아리 활동으로 [GDSC](https://gdsc.community.dev/)(Google Developer Student Club)에 가입하게 되었고 그곳에서 처음 [Waymo](https://waymo.com)를 알게 되었다. '자율주행'이라는 단어는 들어본 적 있었지만 어떤 기술이고 어디까지 발전해 있는지는 그때 처음 알았다고 해도 무방하다.
 
 <br>
 
