--- a/_posts/Daily/2025-03-22-daily_eng.md
+++ b/_posts/Daily/2025-03-22-daily_eng.md
@@ -78,7 +78,7 @@ It would be a form of technology for people—technology that protects and empow
 
 And so I made a decision. It might sound strange but the person who helped me ride my bike back then couldn’t actually ride one herself. Just like her, I may still be lacking in many ways, but maybe I can become the kind of developer who holds the back of someone’s car—with care and quiet strength.
 
-I may not build a flashy, shape-shifting Transformer.. But I want to become someone who quietly protects the everyday lives of others. ***<span style="color:steelblue;">'A developer you’d trust to take the wheel—because you know your road is safe behind them.'</span>***
+I may not build a flashy, shape-shifting Transformer.. But I want to become someone who quietly protects the everyday lives of others. ***<span style="color:steelblue;">A person who quietly watches over someone's daily life, a developer who can be trusted and left behind</span>***
 
 
 
